output/y.output
Terminals unused in grammar

    EOL
    TK_MINUS_MINUS
    TK_MAIN
    TK_ID
    TK_TIPO_INT
    TK_FIM
    TK_ERROR
    TK_ELOG
    TK_EQUAL
    TK_DIFERENT
    TK_MAIOR_IGUAL
    TK_MENOR_IGUAL
    TK_ASPA
    TK_NEGATIVE
    TK_OR


Grammar

    0 $accept: S $end

    1 S: COMMANDS

    2 COMMANDS: COMMAND COMMANDS
    3         | '{' COMMANDS '}' COMMANDS
    4         | ε

    5 COMMAND: EXPRESSION

    6 EXPRESSION: TERM
    7           | EXPRESSION '+' TERM
    8           | EXPRESSION '-' TERM

    9 TERM: UNARY
   10     | TERM '*' UNARY
   11     | TERM '/' UNARY

   12 UNARY: FACTOR

   13 FACTOR: TK_NUM


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 10
    '+' (43) 7
    '-' (45) 8
    '/' (47) 11
    '{' (123) 3
    '}' (125) 3
    error (256)
    TK_NUM (258) 13
    EOL (259)
    TK_MINUS_MINUS (260)
    TK_MAIN (261)
    TK_ID (262)
    TK_TIPO_INT (263)
    TK_FIM (264)
    TK_ERROR (265)
    TK_ELOG (266)
    TK_EQUAL (267)
    TK_DIFERENT (268)
    TK_MAIOR_IGUAL (269)
    TK_MENOR_IGUAL (270)
    TK_ASPA (271)
    TK_NEGATIVE (272)
    TK_OR (273)


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    S (26)
        on left: 1
        on right: 0
    COMMANDS (27)
        on left: 2 3 4
        on right: 1 2 3
    COMMAND (28)
        on left: 5
        on right: 2
    EXPRESSION (29)
        on left: 6 7 8
        on right: 5 7 8
    TERM (30)
        on left: 9 10 11
        on right: 6 7 8 10 11
    UNARY (31)
        on left: 12
        on right: 9 10 11
    FACTOR (32)
        on left: 13
        on right: 12


State 0

    0 $accept: • S $end

    TK_NUM  shift, and go to state 1
    '{'     shift, and go to state 2

    $default  reduce using rule 4 (COMMANDS)

    S           go to state 3
    COMMANDS    go to state 4
    COMMAND     go to state 5
    EXPRESSION  go to state 6
    TERM        go to state 7
    UNARY       go to state 8
    FACTOR      go to state 9


State 1

   13 FACTOR: TK_NUM •

    $default  reduce using rule 13 (FACTOR)


State 2

    3 COMMANDS: '{' • COMMANDS '}' COMMANDS

    TK_NUM  shift, and go to state 1
    '{'     shift, and go to state 2

    $default  reduce using rule 4 (COMMANDS)

    COMMANDS    go to state 10
    COMMAND     go to state 5
    EXPRESSION  go to state 6
    TERM        go to state 7
    UNARY       go to state 8
    FACTOR      go to state 9


State 3

    0 $accept: S • $end

    $end  shift, and go to state 11


State 4

    1 S: COMMANDS •

    $default  reduce using rule 1 (S)


State 5

    2 COMMANDS: COMMAND • COMMANDS

    TK_NUM  shift, and go to state 1
    '{'     shift, and go to state 2

    $default  reduce using rule 4 (COMMANDS)

    COMMANDS    go to state 12
    COMMAND     go to state 5
    EXPRESSION  go to state 6
    TERM        go to state 7
    UNARY       go to state 8
    FACTOR      go to state 9


State 6

    5 COMMAND: EXPRESSION •
    7 EXPRESSION: EXPRESSION • '+' TERM
    8           | EXPRESSION • '-' TERM

    '-'  shift, and go to state 13
    '+'  shift, and go to state 14

    $default  reduce using rule 5 (COMMAND)


State 7

    6 EXPRESSION: TERM •
   10 TERM: TERM • '*' UNARY
   11     | TERM • '/' UNARY

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 6 (EXPRESSION)


State 8

    9 TERM: UNARY •

    $default  reduce using rule 9 (TERM)


State 9

   12 UNARY: FACTOR •

    $default  reduce using rule 12 (UNARY)


State 10

    3 COMMANDS: '{' COMMANDS • '}' COMMANDS

    '}'  shift, and go to state 17


State 11

    0 $accept: S $end •

    $default  accept


State 12

    2 COMMANDS: COMMAND COMMANDS •

    $default  reduce using rule 2 (COMMANDS)


State 13

    8 EXPRESSION: EXPRESSION '-' • TERM

    TK_NUM  shift, and go to state 1

    TERM    go to state 18
    UNARY   go to state 8
    FACTOR  go to state 9


State 14

    7 EXPRESSION: EXPRESSION '+' • TERM

    TK_NUM  shift, and go to state 1

    TERM    go to state 19
    UNARY   go to state 8
    FACTOR  go to state 9


State 15

   10 TERM: TERM '*' • UNARY

    TK_NUM  shift, and go to state 1

    UNARY   go to state 20
    FACTOR  go to state 9


State 16

   11 TERM: TERM '/' • UNARY

    TK_NUM  shift, and go to state 1

    UNARY   go to state 21
    FACTOR  go to state 9


State 17

    3 COMMANDS: '{' COMMANDS '}' • COMMANDS

    TK_NUM  shift, and go to state 1
    '{'     shift, and go to state 2

    $default  reduce using rule 4 (COMMANDS)

    COMMANDS    go to state 22
    COMMAND     go to state 5
    EXPRESSION  go to state 6
    TERM        go to state 7
    UNARY       go to state 8
    FACTOR      go to state 9


State 18

    8 EXPRESSION: EXPRESSION '-' TERM •
   10 TERM: TERM • '*' UNARY
   11     | TERM • '/' UNARY

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 8 (EXPRESSION)


State 19

    7 EXPRESSION: EXPRESSION '+' TERM •
   10 TERM: TERM • '*' UNARY
   11     | TERM • '/' UNARY

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 7 (EXPRESSION)


State 20

   10 TERM: TERM '*' UNARY •

    $default  reduce using rule 10 (TERM)


State 21

   11 TERM: TERM '/' UNARY •

    $default  reduce using rule 11 (TERM)


State 22

    3 COMMANDS: '{' COMMANDS '}' COMMANDS •

    $default  reduce using rule 3 (COMMANDS)
